# Maru

./: CMakeLists.txt  README.md  main.cpp
Server/: CMakeLists.txt
Server/Include/: MaruBase.h  MaruMemMacro.h
Server/Source/: MaruBase.cpp
